# YSOpy

./: .gitignore  19k points data analysis.ipynb  4 lakh points data analysis.ipynb  Convolved data extraction loop  Data Handling.ipynb  H-gen_file.py  H_emission_refac.py  LICENSE  MANIFEST.in  README.md  Untitled.ipynb  base_funcs.py  base_funcs_arc.py  base_funcs_most_up.py  config_file.cfg  config_file.ini  config_generator.py  configwriter.py  console_func.py  mcmc.py  pyproject.toml  testing_p.py
ysopy/: H-gen_file.py  H_emission_refac.py  Least_square_testing (1).ipynb  base_funcs.py  config_file.cfg  config_generator.py  config_writer.py  fit_funcs.py  h_emission.py  h_minus_emission.py  mcmc.py  mcmc_config.cfg  params_200_fuori.npy  pyproject.toml  read_params.py  utils.py
ysopy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
ysopy/.ipynb_checkpoints/: Least_square_testing-checkpoint.ipynb  config_file-checkpoint.cfg
ysopy/Least_sq_files/: fit_anim.py
ysopy/ysopy/: H-gen_file.py  H_emission_refac.py  base_funcs.py  config_generator.py  console_func.py
ysopy/ysopy.egg-info/: entry_points.txt
